yamls/envoy_gateway/cm_envoy.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoyconfig
data:
  envoy.yaml: |
    admin:
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    static_resources:
      listeners:
        - name: 0.0.0.0_8080
          address:
            socket_address:  { address: 0.0.0.0, port_value: 8080 }
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: gateway_http
                    codec_type: AUTO
                    route_config:
                      name: myroute
                      virtual_hosts:
                        - name: myhost
                          domains: [ "envoy.virtuallain.com:32180" ]
                          routes:
                            - match: { prefix: "/" }
                              route:
                                cluster: lain_cluster_config
                    http_filters:
                      - name: envoy.filters.http.router
          trafficDirection: OUTBOUND
    
      clusters:
        - name: lain_cluster_config
          connect_timeout: 1s
          type: LOGICAL_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: lain_cluster
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: prodsvc.default.svc.cluster.local
                          port_value: 80
