yamls/envoy_gateway/pod_envoy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  nodeName: lain1
  containers:
    - name: envoyproxy
      image: envoyproxy/envoy-alpine:v1.21.0
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
      volumeMounts:
        - name: envoyconfig
          mountPath: /etc/envoy/
  volumes:
    - name: envoyconfig
      configMap:
        defaultMode: 0655
        name: envoyconfig
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 32180
  selector:  #service通过selector和pod建立关联
    app: gateway
