yamls/envoy_gateway/prodapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prodapi
  namespace: default
spec:
  selector:
    matchLabels:
      app: prod
  replicas: 1
  template:
    metadata:
      labels:
        app: prod
        version: v1
    spec:
      containers:
        - name: prod
          image: docker.io/shenyisyn/prod:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: prodsvc
  namespace: default
  labels:
    app: prod
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: prod
